[package]
name = "json-gen"
description = "The simple console utility and library to generate JSON items"
version = "0.2.3"
authors = ["Boris Zhguchev <boris.zhguchev@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/besok/json-generator"
repository = "https://github.com/besok/json-generator"
readme = "README.md"
keywords = ["json", "json-generator","json-template","generator" ]
categories = ["libraries","command-line-utilities","development-tools"]

[dependencies]
nom = "7.1.1"
serde_json = "1.0"
rand = "0.8.5"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = "0.4"
once_cell = "1.3.1"
curl="0.4.29"
clap = "4.0.26"
log = "0.4"
simplelog = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.3"
